--- a/LAHJA/UI/Components/Billing/Shared/BillingMethodsSection.razor
+++ b/LAHJA/UI/Components/Billing/Shared/BillingMethodsSection.razor
@@ -13,7 +13,7 @@
                 <TitleContent>
                     <div class="d-flex">
                         <MudAlert Severity="Severity.Warning" Variant="Variant.Outlined">
-                            @Translate("The reactor temperature exceeds the optimal range") + @Translate("Billing Method")
+                           @Translate("Billing Method")
                         </MudAlert>
                         <MudIcon Icon="@(open ? Icons.Material.Filled.Close : Icons.Material.Filled.Add)" class="ml-auto"></MudIcon>
                     </div>
