--- a/LAHJA/UI/Components/Payment/PaymentComponts.razor
+++ b/LAHJA/UI/Components/Payment/PaymentComponts.razor
@@ -196,7 +196,8 @@
         if (input != null)
         {
             isConfirm = true;
-            StateHasChanged();
+            Payment();
+          @*   StateHasChanged(); *@
         }
     }
 
