--- a/LAHJA/UI/Components/TabelCard/TabelData.razor
+++ b/LAHJA/UI/Components/TabelCard/TabelData.razor
@@ -18,8 +18,7 @@
           OnPageChanged="HandlePageChanged"
           MultiSelection="@MultiSelection"
           RowStyle="RowStyle"
-          Elevation="0"
-          >
+          Elevation="0">
 
     <HeaderContent>
        
