--- a/LAHJA/UI/Templates/Profile/TemplateSubscriptionsPlan.razor
+++ b/LAHJA/UI/Templates/Profile/TemplateSubscriptionsPlan.razor
@@ -1,7 +1,9 @@
 ﻿@* @page "/settings/subscriptions" *@
+@using Domain.ShareData
 @using LAHJA.Data.UI.Components
 @using LAHJA.Data.UI.Components.Plan
 @using LAHJA.Data.UI.Components.ProFileModel
+@using LAHJA.Data.UI.Templates.Payment
 @using LAHJA.UI.Components.Auth
 @using LAHJA.Data.UI.Templates.Auth 
 @using LAHJA.UI.Components.Plan
@@ -9,35 +11,52 @@
 @using LAHJA.UI.Components.ProFile.Settings
 @using LAHJA.UI.Components.ProFile.USettings
 
+@inject IManageLanguageService _manageLanguageService
 
 @inject LAHJA.Data.UI.Templates.Profile.TemplateProfile Template
+@inject LAHJA.Data.UI.Templates.Subscription.TemplateSubscription TemplateSub
+@inject LAHJA.Data.UI.Templates.Payment.TemplatePayment TemplatePayment
 
 
 
 @if(Template!=null && buildData!=null){
-    <Subscription DataBuild="buildData" />
+    <Subscription Language="@lg" 
+                  DataBuild="buildData"
+                  SubmitCheckoutManage="OnSubmitCheckoutManage"
+                  SubmitPause="TemplateSub.BuilderComponents.SubmitPause"
+                  SubmitResume="TemplateSub.BuilderComponents.SubmitResume"
+                  SubmitDelete="TemplateSub.BuilderComponents.SubmitDelete" />
 }
 
 @code{
 
     private List<DataBuildUserSubscriptionInfo> buildData;
+    private string lg="ar";
 
-    protected async override void OnInitialized()
+
+
+    private async Task OnSubmitCheckoutManage()
     {
-
+        ///TemplatePayment.BuilderComponents.SubmitCheckoutManage = EventCallback.Factory.Create<DataBuildPaymentBase>(this, OnRowClicked);
+        if (TemplatePayment.BuilderComponents.SubmitCheckoutManage != null)
+        {
+           await TemplatePayment.BuilderComponents.SubmitCheckoutManage(new());
+        }
     }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
 
         if (firstRender)
         {
-
+            lg = await _manageLanguageService.GetLanguageFromSessionAsync();
             var res= await Template.GetDataBuildSubscriptions();
             if (res.Succeeded)
             {
                 buildData = res.Data;
-            }else if (res.HttpCode == 401)
+            }
+            else 
             {
                 
             }
